<resources>
    <string name="app_name">Easy Way</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="sign_up_prompt"><u>Don\'t have an account? Sign up here.</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="login_prompt"><u>Already have an account? Login Here</u></string>

    <string name="not_implemented">Not implemented yet</string>
    <string name="home">Home</string>
    <string name="tours_and_packages">Tours and Packages</string>
    <string name="book_a_hotel">Book a Hotel</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>

    <!--Validation Strings-->
    <string name="incorrect_name">Please enter name</string>
    <string name="incorrect_email">Please enter correct email</string>
    <string name="enter_password">Please enter a password</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="country">Please select a country</string>
    <string name="gender">Please select your gender</string>
    <string name="country_hint">Country</string>
    <string name="gender_hint">Gender</string>
    <string name="no_hotels_found">No Hotels Found</string>
    <string name="no_packages_found">No Packages Found</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Profile Strings-->
    <string name="action_change_password">Change password</string>
    <string name="action_log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change">Change</string>

    <string name="no_reviews_found">No reviews found</string>

    <string name="my_bookings">My Bookings</string>
    <string name="hotel_bookings">Hotel Bookings</string>
    <string name="package_bookings">Package Bookings</string>
    <string name="confirm_book_this">Book this?</string>
    <string name="book">Book</string>

    <string name="hint_write_review">Please write your review here</string>
    <string name="save">Save</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="booked">Booked!!!</string>
    <string name="booking_error">Could not book</string>
    <string name="no_package_bookings">No Package Bookings!</string>
    <string name="no_hotel_bookings">No Hotel Bookings!</string>
    <string name="done">Done</string>

    <string name="confirm_exit_message">Are you sure you want to exit the App?</string>
    <string name="confirm_exit_title">Confirm Exit?</string>

    <string name="confirm_delete_review">Are you sure you want to delete this review?</string>
    <string name="delete">Delete</string>

    <string name="confirm_cancel_booking_message">Are you sure you want to cancel this booking?</string>
    <string name="confirm_cancel_booking">Confirm Cancel Booking</string>

    <string name="easy_way_about_us_description">EasyWay is a platform to find new places, book hotel or tour package and review and rate them. EasyWay is based in Nepal and aims to promote tourism in Nepal</string>

</resources>
