<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_padding_size_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_change_password"
        android:textAllCaps="true"
        style="@style/primaryTextLarge"
        android:gravity="center"/>

    <EditText
        android:layout_margin="@dimen/margin_padding_size_small"
        android:id="@+id/change_pass_1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password" />
    <EditText
        android:layout_margin="@dimen/margin_padding_size_small"
        android:id="@+id/change_pass_2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"/>

</LinearLayout>
